--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,6 @@ No CRAN.
 ## Example
 
 ```{r example, eval=FALSE}
-library(brain)
 tck_files = list.files(path='path/to/folder', pattern='.tck$', full.names=TRUE)
-L = lapply(tck_files, read_brain) |> setNames(basename(tck_files))
+L = lapply(tck_files, brain:.read.tck) |> setNames(basename(tck_files))
 ```
