Update README with cleaner layout and example v5

--- a/README.Rmd
+++ b/README.Rmd
@@ -40,5 +40,5 @@ No CRAN.
 
 ```{r example, eval=FALSE}
 tck_files = list.files(path='path/to/folder', pattern='.tck$', full.names=TRUE)
-L = lapply(tck_files, brain:.read.tck) |> setNames(basename(tck_files))
+L = lapply(tck_files, brain::read.tck) |> setNames(basename(tck_files))
 ```
